[package]
name = "vue"
version = "0.1.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "derive"]
derive = ["vue_derive"]

[dependencies]
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
vue_derive = { path = "../vue_derive", optional = true }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
strum = { version = "0.23", features = ["derive"] }
wasm-bindgen-test = "0.3.13"


