[package]
name = "vue_derive"
edition = "2021"
version = "0.1.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/danylaporte/storm"
publish = false

[lib]
proc-macro = true

[dependencies]
darling = "0.13"
heck = "0.4"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }

[dev-dependencies]

